public class GameConstants
{
    public const string WolfWeaponTag = "WolfWeapon";
    public const string PlayerProjectileTag = "PlayerProjectile";
    public const string BackWeaponTag = "BackWeapon";
    public const string ObstacleTag = "Obstacle";
    public const string PlayerSpawnTag = "PlayerSpawn";
    public const string IsTouched = "isTouched";
    public const string PlayerTag = "Player";
    public const string SceneMainMenu = "Main-Menu";
    public const string SceneLose = "Game-Over-Lose";
    public const string SceneWin = "Game-Over-Win";
    public const string SceneLvl01 = "Level-01";
    public const string SceneLvl02 = "Level-02";
    public const string SceneLvl03 = "Level-03";
    
    public const float ItemDelay = 0.1f;
    public const float MonsterDelay = 1f;
    public const float MeleeAttackDelay = 1f;
    public const float RangeAttackDelay = 2f;
    public const float ProjectileDuration = 1f;
    public const float UltAnimationDuration = 1f;
    public const float DefaultSlimeHp = 100f;
    public const string Attack01 = "j";
    public const string Attack02 = "k";
    public const string Attack03 = "l";
    public const string UltAttack = "space";
    public const string IsAttackAnimBool = "isAttack";
    public const string IsHitAnimBool = "isHit";
    public const string IsDeadAnimBool = "isDead";
    public const int MaxWolfCount = 5;
    public const int NoDelay = 0;
    public const int Projectile01Index = 0;
    public const int Level01AudioClipLength = 2;

}

